
Compatibility Breaks
********************

New Features
************

* ``bzr diff`` now supports a --format option, which can be used to 
  select alternative diff formats. (Jelmer Vernooij, #555994)

Bug Fixes
*********

* When invoked with a range revision, ``bzr log`` doesn't show revisions
  that are not part of the ancestry anymore.
  (Vincent Ladeuil, #474807)

Improvements
************

* Less code is loaded at startup.  (Cold-cache start time is about 10-20%
  less.)
  (Martin Pool, #553017)

Documentation
*************

API Changes
***********

Internals
*********

Testing
*******


bzr 2.2.0b1
###########

:2.2.0b1: Not released yet

Compatibility Breaks
********************

* BTreeGraphIndex can now take an offset to indicate that the data starts
  somewhere other than then beginning of the file. (John Arbash Meinel)

* Deleted very old hidden commands ``versionedfile-list``,
  ``weave-plan-merge``, ``weave-merge-text``.
  (Martin Pool)

* ``Repository.get_inventory_sha1()`` and ``Repository.get_revision_xml()`` 
  have been removed. (Jelmer Vernooij)

* ``Repository.get_revision_inventory()`` has been removed in favor of
  ``Repository.get_inventory()``. (Jelmer Vernooij)

* All test servers have been moved out of the bzrlib.transport hierarchy to
  bzrlib.tests.test_server *except* for MemoryServer, ChrootServer and
  PathFilteringServer. ``bzrlib`` users may encounter test failures that can
  be fixed by updating the related imports from ``bzrlib.transport.xxx`` to
  ``bzrlib.tests.test_server``.
  (Vincent Ladeuil)

* ``BranchReferenceFormat.initialize()`` now takes an optional name argument
  as its second parameter, for consistency with the initialize() method of
  other formats. (Jelmer Vernooij)

New Features
************

* Added ``bzr remove-branch`` command that can remove a local or remote 
  branch. (Jelmer Vernooij, #276295)

* ``bzr export`` now takes an optional argument ``--per-file-timestamps``